...

  return (
    <SafeAreaView>
      <View
        className="flex h-full w-full px-4 "
        id="main-view"
        testID="mainview"
      >
        <CustomButton
          title="Create Contact"
          handlePress={() =>
            router.push({
              pathname: '/modal',
...
